--- a/style.css
+++ b/style.css
@@ -7,54 +7,22 @@ body {
   padding: 1rem;
 }
 
-h1, h2 {
-  margin: 0;
-}
+a { color: #FAF0E6; }
+a:visited { color: #B9B4C7; }
+h1, h2, h3 { margin: 0; }
+hr { width: auto; border: 1px dotted #5C5470; }
 
-hr {
-  width: auto;
-  border: 1px dotted #5C5470;
-}
+.liststylenone {list-style: none; padding-left: 0; gap: 6px }
+ul li { justify-content: space-between; }
 
-ul {
-  list-style: none;
-  padding-left: 0;
-}
-
-ul li {
-  justify-content: space-between;
-}
-
-.flex-row {
-  display: flex;
-  flex-direction: row;
-}
-
-.flex-col {
-  display: flex;
-  flex-direction: column;
-}
-
-.justify-between {
-  justify-content: space-between;
-}
-
-.section {
-  justify-content: space-between;
-  gap: 10px;
-}
+.flex-row { display: flex; flex-direction: row; }
+.flex-col { display: flex; flex-direction: column; }
+.justify-between { justify-content: space-between; }
+.section { justify-content: space-between; gap: 10px; }
 
 .w20 { width: 20%; }
 .w80 { width: 80%; }
-
-.small-text {
-  font-size: medium;
-}
-
-.large-text {
-  font-size: xx-large;
-}
-
-.dark-text {
-  color: #B9B4C7;
-}
+.small-text { font-size: small; }
+.medium-text { font-size: medium; }
+.large-text { font-size: xx-large; }
+.dark-text { color: #B9B4C7; }
